added owned information to the focus

--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -11,7 +11,7 @@
     <div class="col-5">
       <div class="card">
         <div class="card-body">
-          <p class="card-title">{{ buy.stock_data.code }} - {{ buy.nickname }}</p>
+          <p class="card-title">{{ buy.stock_data.code }} ({{ buy.stock_data.owned }}) - {{ buy.nickname }}</p>
           <div class="card-text">
             <div class="row">
               <div class="col-6">
