--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -13,7 +13,7 @@
         <div class="col-5">
           <div class="card">
             <div class="card-body">
-              <p class="card-title">{{ experience.stock_data.code }} - {{ experience.nickname }}</p>
+              <p class="card-title">{{ experience.stock_data.code }} ({{ experience.stock_data.owned }}) - {{ experience.nickname }}</p>
               <div class="card-text">
                 <div class="row">
                   <div class="col-5">
