--- a/src/app/stock/edit-stock/edit-stock.component.html
+++ b/src/app/stock/edit-stock/edit-stock.component.html
@@ -1,6 +1,7 @@
 
 <form #editStockForm="ngForm" class="form-inline">
   <div class="input-group">
-    <input type="text" id="stockPrice" class="form-control w-75" [(ngModel)]="stockInput.price" name="price"><button class="input-group-addon" (click)="stockSelected()">Ok</button>
+    <input type="text" id="stockPrice" class="form-control w-75" [(ngModel)]="stockInput.price" name="price"><button
+      class="form-control input-group-addon" (click)="stockSelected()">Ok</button>
   </div>
 </form>
