--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -1,10 +1,4 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-      <a href="/">GoHome</a>
-    </div>
-  </div>
-</div>
+<zen-menu></zen-menu>
 
 <div class="container-fluid">
   <div class="row">
