--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,11 +1,3 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-      <a href="/stock">Stock</a> |
-      <a href="/experience">Focus on Experiences</a> |
-      <a href="/buy-focus">Focus on Buys</a>
-    </div>
-  </div>
-</div>
+<zen-menu></zen-menu>
 <zen-operations-overview></zen-operations-overview>
 
