--- a/src/app/stock/stock.component.html
+++ b/src/app/stock/stock.component.html
@@ -1,11 +1,4 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-12">
-      <a href="/">GoHome</a>
-    </div>
-  </div>
-</div>
-
+<zen-menu></zen-menu>
 <zen-add-stock></zen-add-stock>
 
 <div class="container-fluid">
