--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-2" *ngFor="let buy of buys">
+  <div class="col-2 mt-3" *ngFor="let buy of buys">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">{{ buy.stock_data.code }}</h4>
