--- a/src/app/operation/operation-accordion/operation-accordion.component.html
+++ b/src/app/operation/operation-accordion/operation-accordion.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="row">
-    <div class="col-4 offset-8">
+    <div class="col-4">
 
       <ngb-accordion #acc="ngbAccordion" activeIds="ngb-panel-0">
         <ngb-panel id="experience" name="experience" title="Experience">
