--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -1,5 +1,6 @@
 <zen-menu></zen-menu>
 
+<zen-operation-accordion (onOperationMade)="updateExperiment($event)"></zen-operation-accordion>
 <div class="container-fluid">
   <div class="row">
     <div class="col-12" *ngFor="let experience of experiences">
