--- a/src/app/operation/buy/buy.component.html
+++ b/src/app/operation/buy/buy.component.html
@@ -1,35 +1,39 @@
-<form #buyForm="ngForm">
-  <div class="form-group">
-    <p>Buy:</p>
-    <p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
-    <div class="form-group">
-      <label for="date">Date: </label>
-      <input type="datetime-local" class="form-control" id="date" [(ngModel)]="buy.date" name="date">
-    </div>
+<div class="card">
+  <div class="card-header">Buy</div>
+  <div class="card-body">
+    <form #buyForm="ngForm">
+      <div class="form-group">
+        <p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
+        <div class="form-group">
+          <label for="date">Date: </label>
+          <input type="datetime-local" class="form-control" id="date" [(ngModel)]="buy.date" name="date">
+        </div>
 
-    <div class="form-group">
-      <label for="amount">Amount: </label>
-      <input type="text" class="form-control" id="amount" [(ngModel)]="buy.amount" name="amount">
-    </div>
+        <div class="form-group">
+          <label for="amount">Amount: </label>
+          <input type="text" class="form-control" id="amount" [(ngModel)]="buy.amount" name="amount">
+        </div>
 
-    <div class="form-group">
-      <label for="price">Price: </label>
-      <input type="text" class="form-control" id="price" [(ngModel)]="buy.price" name="price">
-    </div>
+        <div class="form-group">
+          <label for="price">Price: </label>
+          <input type="text" class="form-control" id="price" [(ngModel)]="buy.price" name="price">
+        </div>
 
-    <div class="form-group">
-      <label for="nickname">Nickname: </label>
-      <input type="text" class="form-control" id="nickname" [(ngModel)]="buy.nickname" name="nickname">
-    </div>
+        <div class="form-group">
+          <label for="nickname">Nickname: </label>
+          <input type="text" class="form-control" id="nickname" [(ngModel)]="buy.nickname" name="nickname">
+        </div>
 
-    <div class="form-group">
-      <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="buy.archived"
-                                                              [checked]="buy.archived">
-      <label for="checkbox">Archived</label>
-    </div>
-    <!-- End of the common operations field -->
+        <div class="form-group">
+          <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="buy.archived"
+                                                                  [checked]="buy.archived">
+          <label for="checkbox">Archived</label>
+        </div>
+        <!-- End of the common operations field -->
 
-    <button class="btn-sm btn-primary" (click)="makeBuy()">Buy</button>
+        <button class="btn-sm btn-primary" (click)="makeBuy()">Buy</button>
+      </div>
+    </form>
   </div>
-</form>
+</div>
 
