--- a/src/app/operation/sell/sell.component.html
+++ b/src/app/operation/sell/sell.component.html
@@ -1,36 +1,42 @@
-<div>
-  <form #addSellForm="ngForm">
-    <p>Sell: </p>
-		<p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
-		<div class="form-group">
-			<label for="date">Date: </label>
-			<input type="datetime-local" class="form-control" id="date" [(ngModel)]="sell.date" name="date">
-		</div>
+<div class="card">
+  <div class="card-header">Sell</div>
+  <div class="card-body">
+    <div>
+      <form #addSellForm="ngForm">
+        <p>Sell: </p>
+        <p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
+        <div class="form-group">
+          <label for="date">Date: </label>
+          <input type="datetime-local" class="form-control" id="date" [(ngModel)]="sell.date" name="date">
+        </div>
 
-		<div class="form-group">
-      <label for="amount">Amount: <span *ngIf="stock && stock.owned">[{{ stock.owned }}]</span> </label>
-			<input type="text" class="form-control" id="amount" [(ngModel)]="sell.amount" name="amount">
-		</div>
+        <div class="form-group">
+          <label for="amount">Amount: <span *ngIf="stock && stock.owned">[{{ stock.owned }}]</span> </label>
+          <input type="text" class="form-control" id="amount" [(ngModel)]="sell.amount" name="amount">
+        </div>
 
-		<div class="form-group">
-			<label for="price">Price: </label>
-			<input type="text" class="form-control" id="price" [(ngModel)]="sell.price" name="price">
-		</div>
+        <div class="form-group">
+          <label for="price">Price: </label>
+          <input type="text" class="form-control" id="price" [(ngModel)]="sell.price" name="price">
+        </div>
 
-		<div class="form-group">
-			<label for="nickname">Nickname: </label>
-			<input type="text" class="form-control" id="nickname" [(ngModel)]="sell.nickname" name="nickname">
-		</div>
+        <div class="form-group">
+          <label for="nickname">Nickname: </label>
+          <input type="text" class="form-control" id="nickname" [(ngModel)]="sell.nickname" name="nickname">
+        </div>
 
-		<div class="form-group">
-			<input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="sell.archived"
-																													 [checked]="sell.archived">
-			<label for="checkbox">Archived</label>
-		</div>
-    <!-- End of operations commons fields -->
+        <div class="form-group">
+          <input type="checkbox" class="form-input" id="archived" name="archived" [(ngModel)]="sell.archived"
+                                                                  [checked]="sell.archived">
+          <label for="checkbox">Archived</label>
+        </div>
+        <!-- End of operations commons fields -->
 
-    <button type="button" (click)="add(); addSellForm.reset()"
-            [disabled]="!addSellForm.form.valid" class="btn btn-primary">Sell
-    </button>
-  </form>
+        <button type="button" (click)="add(); addSellForm.reset()"
+                [disabled]="!addSellForm.form.valid" class="btn btn-primary">Sell
+        </button>
+      </form>
+    </div>
+  </div>
 </div>
+
