--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -1,4 +1,4 @@
-<zen-operation-accordion (onOperationBuy)="updateBuys()"></zen-operation-accordion>
+<zen-operation-accordion (onOperationBuy)="updateAll()" (onOperationMade)="updateAll()"></zen-operation-accordion>
 
 <!-- The Buys -->
 <div class="container-fluid">
@@ -15,7 +15,7 @@
   <section class="row mt-5">
     <div class="col-10 offset-1">
       <h2>Experiments</h2>
-      <zen-experience-list></zen-experience-list>
+      <zen-experience-list [experiences]="experiments"></zen-experience-list>
     </div>
   </section>
 </div>
