Changing the location of the ir

--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -18,4 +18,8 @@
       <zen-experience-list [experiences]="experiments"></zen-experience-list>
     </div>
   </section>
+
+  <div class="fixed-bottom text-center">
+    <zen-irbr></zen-irbr>
+  </div>
 </div>
