Some minor adjustments

--- a/src/app/operation/sell/sell.component.html
+++ b/src/app/operation/sell/sell.component.html
@@ -32,7 +32,7 @@
         </div>
         <!-- End of operations commons fields -->
 
-        <button type="button" (click)="add(); addSellForm.reset()"
+        <button type="button" (click)="add();"
                 [disabled]="!addSellForm.form.valid" class="btn btn-primary">Sell
         </button>
       </form>
