--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -12,14 +12,14 @@
 
   <!-- The experiences -->
  
-  <section class="row mt-5">
+  <section class="row mt-5 mb-5">
     <div class="col-10 offset-1">
       <h2>Experiments</h2>
       <zen-experience-list [experiences]="experiments"></zen-experience-list>
     </div>
   </section>
 
-  <div class="fixed-bottom text-center">
+  <div class="fixed-bottom text-center" style="background-color: white">
     <zen-irbr></zen-irbr>
   </div>
 </div>
