--- a/src/app/stock/edit-stock/edit-stock.component.html
+++ b/src/app/stock/edit-stock/edit-stock.component.html
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-12">
 <form #editStockForm="ngForm" class="form-inline">
   <div class="form-group">
     <div class="input-group-prepend">
@@ -7,3 +9,5 @@
   </div>
 </form>
 <small id="stockPriceHelp" class="form-text text-muted">Update Stock price.</small>
+  </div>
+</div>
