--- a/src/app/operation/experience/experience.component.html
+++ b/src/app/operation/experience/experience.component.html
@@ -3,7 +3,9 @@
   <div class="card-body">
 <form #addExperienceForm="ngForm">
   <!-- TODO: Know bug, deslect the stock when an item is added. It is valid to exp, buy and sell -->
-  <p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
+  <p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"
+      [selectedStock]="stock"></zen-stock-select></p>
+
   <div class="form-group">
     <label for="date">Date: </label>
     <input type="datetime-local" class="form-control" id="date" [(ngModel)]="experience.date" name="date">
@@ -60,7 +62,7 @@
                                                             name="action">
   </div>
 
-  <button type="button" (click)="add(); addExperienceForm.reset()" class="btn btn-primary"
+  <button type="button" (click)="add();" class="btn btn-primary"
                                                                    [disabled]="!addExperienceForm.form.valid">Experiment
   </button>
 </form>
