--- a/src/app/operation/buy-list/buy-list.component.html
+++ b/src/app/operation/buy-list/buy-list.component.html
@@ -3,13 +3,14 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">{{ buy.stock_data.code }}</h4>
-        <h6 class="card-subtitle mb-2 text-muted">{{ buy.nickname || "A nickless buy "}}</h6>
+        <h6 title="{{ getDateLapse(buy.date) }}" class="card-subtitle mb-2 text-muted">{{ buy.nickname || "A nickless buy "}}  {{ buy.date | date: "dd.MM.y" }}</h6>
         <div class="card-text">
           <p>Compra: R$ {{ buy.price }}</p>
           <p>Preço Ação: R$ {{ buy.stock_data.price }}</p>
           <p>Quantidade: {{ buy.amount }}</p>
           <hr>
           <p>Resultado: R$ {{ buy.operation_gain }}</p>
+          
           <hr>
           <zen-edit-stock [stockInput]="buy.stock_data" (onStockUpdated)="notifyChanges()"></zen-edit-stock> 
         </div>
