Showing and updating the account info

--- a/src/app/overview/operations-overview/operations-overview.component.html
+++ b/src/app/overview/operations-overview/operations-overview.component.html
@@ -19,7 +19,16 @@
     </div>
   </section>
 
-  <div class="fixed-bottom text-center" style="background-color: white">
-    <zen-irbr></zen-irbr>
+  <div class="fixed-bottom text-center overview-footer">
+    <div class="row">
+      <div class="col-6 text-left">
+        <zen-irbr></zen-irbr>
+      </div>
+
+      <div class="col-6 text-right">
+        <zen-account-footer></zen-account-footer>
+      </div>
+    </div>
+
   </div>
 </div>
