--- a/src/app/operation/buy-focus/buy-focus.component.html
+++ b/src/app/operation/buy-focus/buy-focus.component.html
@@ -23,6 +23,7 @@
                   <div class="col-6">
                     <ul>
                       <li>Stock value: {{ buy.stock_data.price }}
+                        <zen-edit-stock [stockInput]="buy.stock_data" (onStockUpdated)="updateBuys()"></zen-edit-stock> 
                         <li><hr/></li>
                         <li>Gain: {{ buy.operation_gain | number: '1.2-2' }}/{{ buy.operation_gain_percent | number: '1.2-2' }}%</li>
                     </ul>
