--- a/src/app/operation/experience-list/experience-list.component.html
+++ b/src/app/operation/experience-list/experience-list.component.html
@@ -2,6 +2,7 @@
   <thead>
     <tr>
       <th scope="col">Nick</th>
+      <th scope="col">Intent</th>
       <th scope="col">Stock</th>
       <th scope="col">Amount</th>
       <th scope="col">Price</th>
@@ -14,6 +15,7 @@
   <tbody>
     <tr *ngFor="let experience of experiences">
       <td>{{ experience.nickname }}</td>
+      <td>{{ experience.get_intent_display }}</td>
       <td>{{ experience.stock_data.code }}</td>
       <td>{{ experience.amount }}</td>
       <td>R$ {{ experience.price }}/R$ {{ experience.operation_average_price | number: '1.2-2'}}</td>
