Messaging service added to show errors (and other messages) from the server

--- a/src/app/postoffice/bootstrap-officer/bootstrap-officer.component.html
+++ b/src/app/postoffice/bootstrap-officer/bootstrap-officer.component.html
@@ -3,7 +3,7 @@
     <div class="alert alert-primary">
       <div class="row">
         <div class="col-10">
-          Mensagem: {{ message }}
+          Message from the other side: {{ message }}
         </div>
         <div class="col-2">
           <button type="button" (click)="dismiss()" class="btn btn-sm btn-outline-primary float-right">Dismiss</button>
