--- a/src/app/operation/experience/experience.component.html
+++ b/src/app/operation/experience/experience.component.html
@@ -3,22 +3,22 @@
   <div class="card-body">
 <form #addExperienceForm="ngForm">
   <!-- TODO: Know bug, deslect the stock when an item is added. It is valid to exp, buy and sell -->
-  <p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"
+  <p>*Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"
       [selectedStock]="stock"></zen-stock-select></p>
 
   <div class="form-group">
     <label for="date">Date: </label>
-    <input type="datetime-local" class="form-control" id="date" [(ngModel)]="experience.date" name="date">
+    <input type="datetime-local" class="form-control" id="date" [(ngModel)]="experience.date" name="date" required>
   </div>
 
   <div class="form-group">
-    <label for="amount">Amount: </label>
-    <input type="text" class="form-control" id="amount" [(ngModel)]="experience.amount" name="amount">
+    <label for="amount">*Amount: </label>
+    <input type="text" class="form-control" id="amount" [(ngModel)]="experience.amount" name="amount" required>
   </div>
 
   <div class="form-group">
-    <label for="price">Price: </label>
-    <input type="text" class="form-control" id="price" [(ngModel)]="experience.price" name="price">
+    <label for="price">*Price: </label>
+    <input type="text" class="form-control" id="price" [(ngModel)]="experience.price" name="price" required>
   </div>
 
   <div class="form-group">
@@ -62,8 +62,7 @@
                                                             name="action">
   </div>
 
-  <button type="button" (click)="add();" class="btn btn-primary"
-                                                                   [disabled]="!addExperienceForm.form.valid">Experiment
+  <button type="button" (click)="add();" class="btn btn-primary" [disabled]="!addExperienceForm.form.valid">Experiment
   </button>
 </form>
   
