--- a/src/app/operation/sell/sell.component.html
+++ b/src/app/operation/sell/sell.component.html
@@ -4,20 +4,20 @@
     <div>
       <form #addSellForm="ngForm">
         <p>Sell: </p>
-        <p>Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
+        <p>*Select the stock: <zen-stock-select (selectStockEvent)="stockSelected($event)"></zen-stock-select></p>
         <div class="form-group">
-          <label for="date">Date: </label>
-          <input type="datetime-local" class="form-control" id="date" [(ngModel)]="sell.date" name="date">
+          <label for="date">*Date: </label>
+          <input type="datetime-local" class="form-control" id="date" [(ngModel)]="sell.date" name="date" required>
         </div>
 
         <div class="form-group">
-          <label for="amount">Amount: <span *ngIf="stock && stock.owned">[{{ stock.owned }}]</span> </label>
-          <input type="text" class="form-control" id="amount" [(ngModel)]="sell.amount" name="amount">
+          <label for="amount">*Amount: <span *ngIf="stock && stock.owned">[{{ stock.owned }}]</span> </label>
+          <input type="text" class="form-control" id="amount" [(ngModel)]="sell.amount" name="amount" required>
         </div>
 
         <div class="form-group">
-          <label for="price">Price: </label>
-          <input type="text" class="form-control" id="price" [(ngModel)]="sell.price" name="price">
+          <label for="price">*Price: </label>
+          <input type="text" class="form-control" id="price" [(ngModel)]="sell.price" name="price" required>
         </div>
 
         <div class="form-group">
