Showing shark in the footer

--- a/src/app/account/account-footer/account-footer.component.html
+++ b/src/app/account/account-footer/account-footer.component.html
@@ -9,6 +9,7 @@
     <ul class="m-0 p-0 list-unstyled account-size">
       <li>Day Trade: R$ {{ account.operation_cost_day_trade | number: '1.2-2' }}</li>
       <li>Fraction: R$ {{ account.operation_cost_fraction | number: '1.2-2' }}</li>
+      <li><zen-shark></zen-shark>
     </ul>
   </div>
 </div>
