--- a/src/app/operation/experience-focus/experience-focus.component.html
+++ b/src/app/operation/experience-focus/experience-focus.component.html
@@ -31,7 +31,7 @@
                 <div class="row">
                   <div class="col-5">
                     <ul>
-                      <li>Stop Loss: R$ {{ experience.stop_loss | number:'1.2-2' }}</li>
+                      <li><span title="R$ {{ experience.stop_loss_result | number: '1.2-2' }}/ {{ experience.stop_loss_percent | number: '1.2-2' }}%">Stop Loss: R$ {{ experience.stop_loss | number:'1.2-2' }}</span></li>
                       <li>Stop Gain: R$ {{ experience.stop_gain | number:'1.2-2' }} </li>
                       <li>Limit: R$ {{ experience.limit | number:'1.2-2' }} </li>
                       <li>Target: R$ {{ experience.target | number:'1.2-2' }} </li>
