--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 /* @import url("../node_modules/normalize.css/normalize.css"); */
 @import url("assets/css/reset.css");
 @import url("../node_modules/bootstrap/dist/css/bootstrap.css");
+@import url("../node_modules/font-awesome/css/font-awesome.min.css");
 
 p{
     margin-top: 0;
